--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div class="accordion-body">
                         <ul>
                             <li><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2" href="#"
-                                    data-bs-toggle="modal" data-bs-target="#repos">Repositories</a></li>
+                                    data-bs-toggle="modal" data-bs-target="#repos">Projects</a></li>
                             <li><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2" href="#"
                                     data-bs-toggle="modal" data-bs-target="#github-history">History</a></li>
                             <li><a class="col-md-3 pb-2 text-decoration-none"
@@ -159,29 +159,29 @@
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Repositories under Geerooniimoo</h5>
+                        <h5 class="modal-title ms-auto" id="exampleModalLabel">PROJECTS</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <div class="container-fluid row">
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#leaflet" href="#">Leaflet-challenge</a>
+                                data-bs-target="#leaflet" href="#">Leaflet-Projects</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Geerooniimoo.io</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#plotly" href="#">plotly-challenge</a>
+                                data-bs-target="#plotly" href="#">plotly-Projects</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">python-api-challenge</a>
+                                href="#">python-api-Projects</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#pandas" href="#">pandas-challenge</a>
+                                data-bs-target="#pandas" href="#">pandas-Projects</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#d3"
-                                href="#">D3-Challenge</a>
+                                href="#">D3-Projects</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#sqlalchemy" href="#">SQLAlchemy-Challenge</a>
+                                data-bs-target="#sqlalchemy" href="#">SQLAlchemy-Projects</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Mission_To_Mars</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#matplotlib" href="#">matplotlib-challenge</a>
+                                data-bs-target="#matplotlib" href="#">matplotlib-Projects</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">NFL-RECORDS</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
@@ -189,15 +189,15 @@
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">VBA-Scripting</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql"
-                                href="#">SQL-Challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">infosectechnology</a>
+                                href="#">SQL-Projects</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#tableau"
+                                href="#">Tableau-Project</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">SpiritualEngineering</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">JavaScript-Challenge</a>
+                                href="#">JavaScript-Projects</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web"
-                                href="#">Web-Design-Challenge</a>
+                                href="#">Web-Design-Projects</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#jup"
                                 href="#">Mission_to_Jupiter</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
@@ -251,7 +251,7 @@
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Leaflet-Challenge preview</h5>
+                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Leaflet-Projects preview</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -269,7 +269,7 @@
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Pandas-Challenge preview</h5>
+                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Pandas-Projects preview</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -468,7 +468,7 @@
                     <div class="modal-body">
                         <div class="row my-4">
                             <div class="col-md-3"></div>
-                            <div class="col-md-6"><img src="./assets/images/D3-Challenge.gif" alt="d3_gif"
+                            <div class="col-md-6"><img src="./assets/images/D3-Projects.gif" alt="d3_gif"
                                     class="w-100"></div>
                         </div>
                         <p>
@@ -931,6 +931,29 @@
 
                                 </p>
                             </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal hide" id="tableau" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title ms-auto" id="exampleModalLabel"><a href="https://public.tableau.com/app/profile/geronimo.augusto.perez/viz/GroveStationMostActiveDepartureTime/CitiBikeAnalysis?publish=yes">Citi Bike Analysis In Tableau</a></h3>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <img class="w-100" src="assets/images/bike6.png">
+                            <img class="w-100" src="assets/images/bike1.png" alt="">
+                            <img class="w-100" src="assets/images/bike2.png" alt="">
+                            <img class="w-100" src="assets/images/bike3.png" alt="">
+                            <img class="w-100" src="assets/images/bike4.png" alt="">
+                            <img class="w-100" src="assets/images/bike5.png" alt="">
                         </div>
 
 
