--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body text-center">
 
-                        <a class="text-decoration-none"
+                        <a class="text-decoration-none" target="_black"
                             href="https://calendly.com/geronimo-perez/50-minute-tutoring-session-1">
 
                             <svg width="210" height="145">
@@ -114,13 +114,15 @@
                 <h2 class="accordion-item" id="headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        Github
+                        Miscellaneous
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <ul>
+                            <li><a class="col-md-3 pb-2 text-decoration-none col-md-3 pb-2" href="https://bit.ly/students-eval"
+                                    target="_blank" >Evaluation</a></li>
                             <li><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2" href="#"
                                     data-bs-toggle="modal" data-bs-target="#repos">Projects</a></li>
                             <li><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2" href="#"
