removed unfinished projects

--- a/index.html
+++ b/index.html
@@ -121,14 +121,12 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <ul>
-                            <li><a class="col-md-3 pb-2 text-decoration-none col-md-3 pb-2" href="https://bit.ly/students-eval"
-                                    target="_blank" >Evaluation</a></li>
                             <li><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2" href="#"
                                     data-bs-toggle="modal" data-bs-target="#repos">Projects</a></li>
+                            <li><a class="col-md-3 pb-2 text-decoration-none col-md-3 pb-2"
+                                    href="https://bit.ly/students-eval" target="_blank">Evaluation</a></li>
                             <li><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2" href="#"
-                                    data-bs-toggle="modal" data-bs-target="#github-history">History</a></li>
-                            <li><a class="col-md-3 pb-2 text-decoration-none"
-                                    href="https://github.com/Geerooniimoo">Website</a></li>
+                                    data-bs-toggle="modal" data-bs-target="#github-history">Github View</a></li>
                         </ul>
                     </div>
                 </div>
@@ -166,82 +164,58 @@
                     </div>
                     <div class="modal-body">
                         <div class="container-fluid row">
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#leaflet" href="#">Leaflet-Projects</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">Geerooniimoo.io</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
+                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
+                                href="#">Geerooniimoo.io</a> -->
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#plotly" href="#">plotly-Projects</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">python-api-Projects</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
+                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
+                                href="#">python-api-Projects</a> -->
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#pandas" href="#">pandas-Projects</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#d3"
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#d3"
                                 href="#">D3-Projects</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#sqlalchemy" href="#">SQLAlchemy-Projects</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">Mission_To_Mars</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
+                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Mission_To_Mars</a> -->
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#matplotlib" href="#">matplotlib-Projects</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
+                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">NFL-RECORDS</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">heroesmemorygame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">VBA-Scripting</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql"
-                                href="#">SQL-Projects</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#tableau"
-                                href="#">Tableau-Project</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">SpiritualEngineering</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">JavaScript-Projects</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web"
-                                href="#">Web-Design-Projects</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#jup"
-                                href="#">Mission_to_Jupiter</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">Password-Generator</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">FriendFinder</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#gamazon" href="#">Gamazon</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">realnewslinks</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">HYBC</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">New-York-Times-API</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#liri"
-                                href="#">liri-node-app</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">WeatherForecast</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">GifTastic</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">Calender</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#burger"
-                                href="#">crudaburger</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#" href="#">porfolio</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">NodeGuessGame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">TrainScheduler</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">CristalCollectorGame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">Hangman-Game</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">BoxingGame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">Responsive-HYBC</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">Bootstrap-Portfolio</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">Basic-Portfolio</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
+                                href="#">VBA-Scripting</a> -->
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql" href="#">SQL-Projects</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
+                            data-bs-target="#tableau" href="#">Tableau-Project</a>
+                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">SpiritualEngineering</a> -->
+                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">JavaScript-Projects</a> -->
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web" href="#">Web-Design-Projects</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#jup" href="#">Mission_to_Jupiter</a>
+                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Password-Generator</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">FriendFinder</a> -->
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
+                            data-bs-target="#gamazon" href="#">Gamazon</a>
+                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">realnewslinks</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">HYBC</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">New-York-Times-API</a> -->
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#liri" href="#">liri-node-app</a>
+                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">WeatherForecast</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">GifTastic</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Calender</a> -->
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
+                            data-bs-target="#burger" href="#">crudaburger</a>
+                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">porfolio</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">NodeGuessGame</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">TrainScheduler</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">CristalCollectorGame</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Hangman-Game</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">BoxingGame</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Responsive-HYBC</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Bootstrap-Portfolio</a>
+                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Basic-Portfolio</a> -->
                             </ul>
                         </div>
                     </div>
@@ -470,8 +444,8 @@
                     <div class="modal-body">
                         <div class="row my-4">
                             <div class="col-md-3"></div>
-                            <div class="col-md-6"><img src="./assets/images/D3-Projects.gif" alt="d3_gif"
-                                    class="w-100"></div>
+                            <div class="col-md-6"><img src="./assets/images/D3-Projects.gif" alt="d3_gif" class="w-100">
+                            </div>
                         </div>
                         <p>
                             Analyzed the current trends shaping people's lives, as well as created charts, graphs, and
@@ -681,7 +655,7 @@
             </div>
         </div>
 
-        <div class="modal hide" id="gamazon" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
+        <div class="modal fade" id="gamazon" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -739,7 +713,7 @@
             </div>
         </div>
 
-        <div class="modal hide" id="liri" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
+        <div class="modal fade" id="liri" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -869,7 +843,7 @@
             </div>
         </div>
 
-        <div class="modal hide" id="burger" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
+        <div class="modal fade" id="burger" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -941,11 +915,13 @@
             </div>
         </div>
 
-        <div class="modal hide" id="tableau" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
+        <div class="modal fade" id="tableau" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h3 class="modal-title ms-auto" id="exampleModalLabel"><a href="https://public.tableau.com/app/profile/geronimo.augusto.perez/viz/GroveStationMostActiveDepartureTime/CitiBikeAnalysis?publish=yes">Citi Bike Analysis In Tableau</a></h3>
+                        <h3 class="modal-title ms-auto" id="exampleModalLabel"><a
+                                href="https://public.tableau.com/app/profile/geronimo.augusto.perez/viz/GroveStationMostActiveDepartureTime/CitiBikeAnalysis?publish=yes">Citi
+                                Bike Analysis In Tableau</a></h3>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
